--- a/src/main/resources/static/styles/indexStyle.css
+++ b/src/main/resources/static/styles/indexStyle.css
@@ -12,7 +12,6 @@ body {
 .login-container {
   width: 395px;
   height: 400px;
-  /*height: 562px;*/
   padding: 20px;
   border: 2px solid #cccccc9e;
   border-radius: 14px;
@@ -30,11 +29,8 @@ body {
   border: none;
   border-bottom: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #000000;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background-color: transparent; /* Alterado para transparent */
+  color: white; /* Adicionado para definir a cor do texto */
 }
 
 .login-button {
@@ -52,25 +48,8 @@ body {
   font-size: 60px;
   color: white;
 }
-/*
-.div-main-checkbox {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.checkbox-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 5px;
-  margin-top: 20px;
+.error-message {
   color: white;
-  background-color: #ffffff3f;
-  opacity: 0.7;
-  height: 40px;
-  width: 227px;
-  border: 1px;
-  border-radius: 5px;
-}*/
+  border-bottom: 1px solid red;
+  padding-bottom: 3px;
+}
