fix: consertando login com spring security

--- a/src/main/resources/templates/cadastroUsuario.html
+++ b/src/main/resources/templates/cadastroUsuario.html
@@ -6,7 +6,7 @@
     <title>Cadastro Usuario</title>
     <link rel="stylesheet" th:href="@{/styles/cadastroUsuarioStyle.css}" />
     <link rel="stylesheet" th:href="@{/styles/mensagemRetorno.css}" />
-    <link rel="stylesheet" th:href="@{/js/mensagemRetorno.js}" />
+    <script th:src="@{/js/mensagemRetorno.js}"></script>
     <link rel="shortcut icon" th:href="@{/imagens/WINERY7.png}" type="image/x-icon"/>
 </head>
 <body class="body-container">
