--- a/src/main/resources/templates/cadastroUsuario.html
+++ b/src/main/resources/templates/cadastroUsuario.html
@@ -13,8 +13,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Produto</a></li>
-                <li><a href="#">Usuário</a></li>
+                <li><a href="#">Cadastrar produto</a></li>
+                <li><a th:href="@{/admin/cadastrar}" >Cadastrar usuário</a></li>
                 <li><a th:href="@{/admin/listar}" >Listar Usuários</a></li>
             </ul>
         </nav>
