--- a/src/main/resources/static/styles/listaUsuarioStyle.css
+++ b/src/main/resources/static/styles/listaUsuarioStyle.css
@@ -48,18 +48,8 @@ nav ul li a:hover {
     margin-right: 30px;
 }
 
-.container {
-    position: relative;
-}
-
-.container img {
-    width: 100%;
-    display: block;
-}
 
 .containerHeader {
-    position: absolute;
-    bottom: 0;
     width: 100%;
     text-align: center;
      
@@ -119,3 +109,72 @@ nav ul li a:hover {
     cursor: pointer;
 }
 
+
+/* Modal*/
+
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center; 
+    
+}
+
+.modal-content {
+    background: linear-gradient(to bottom, #000000, #000000f0);
+    padding: 20px;
+    border-radius: 5px;
+    width: 500px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border: 2px solid #cccccc9e;
+    border-radius: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+/* input cadastro modal */
+
+.inputCadastro{
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    border-radius: 5px;
+    width: 200px;
+    background-color: transparent; 
+    color: white; 
+}
+.inputGrupo{
+    border-radius: 15px;
+    border: none;
+    width: 200px;
+}
+
+.cadastrar-button {
+    width: 200px;
+    padding: 10px;
+    background: linear-gradient(to bottom, #4F0599, #7A0707);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-left: 20px;
+    cursor: pointer;
+  }
+
+  .titulo-cadastro-usuario{
+    color: white;
+    
+  }
+  .tituloCadastro{
+    color: white;
+    }
