--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -1,71 +1,71 @@
-
 header {
-background-color: #333;
-color: #fff;
-padding: 10px 0;
-display: flex;
-justify-content: space-between;
-align-items: center;
-margin-bottom: 0;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 0;
 
 }
 
 nav ul {
-list-style: none;
-display: flex;
+    list-style: none;
+    display: flex;
 }
 
 nav ul li {
-margin: 0 15px;
+    margin: 0 15px;
 }
 
 nav ul li a {
-text-decoration: none;
-color: #fff;
-font-size: 18px;
+    text-decoration: none;
+    color: #fff;
+    font-size: 18px;
 }
 
 nav ul li a:hover {
-border-bottom: 2px solid #fff;
+    border-bottom: 2px solid #fff;
 }
 
 .search-bar {
-display: flex;
-align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .search-bar input[type="text"] {
-padding: 6px;
-border: none;
-border-radius: 4px;
-margin-right: 30px;
+    padding: 6px;
+    border: none;
+    border-radius: 4px;
+    margin-right: 30px;
 }
 
 .containerHeader {
-position: absolute;
-bottom: 0;
-width: 100%;
-text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 
 }
 
-.tituloCadastro{
-color: white;
+.tituloCadastro {
+    color: white;
 }
 
-.inputCadastro{
+.inputCadastro {
     border-radius: 15px;
     border: none;
     padding: 3px;
     width: 200px;
 }
-.inputGrupo{
+
+.inputGrupo {
     border-radius: 15px;
     border: none;
     width: 125px;
 }
 
-.buttonSearch{
+.buttonSearch {
     width: 100px;
     padding: 10px;
     border: 1px;
@@ -75,29 +75,50 @@ color: white;
     border: none;
     cursor: pointer;
     margin-right: 20px;
-  }
+}
 
 /* Estilo para a seção de imagem de fundo e informações */
 .wine-section {
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: auto;
+}
+.comprar{
+    width: 100%; /* Defina a largura desejada para os elementos (48% para deixar um espaço mínimo entre eles) */
+    padding: 40px;
+    color: #fff;
+    text-align: center;
+    box-sizing: border-box;
+}
+.content-container{
+    display: flex;
+    justify-content: space-between; /* Colocar elementos lado a lado */
+    align-items: center;
+    width: 100%; 
 }
 
 .imghome-overlay {
     position: relative;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     height: 100vh;
     background-image: url("imagens/telainicial.jpg");
     background-size: cover;
     color: #fff;
     text-align: right;
+    flex-direction: column;
 }
 
 .wine-info {
-    max-width: 50%; /* Ajuste conforme necessário */
-    padding: 20px;
-    background-color: rgba(0, 0, 0, 0.7); /* Fundo com opacidade */
+   width: 150%;
+    /* Ajuste conforme necessário */
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Fundo com opacidade */
+    border-radius: 5px;
+    margin-left: 0;
+
 }
 
 .wine-info h1 {
@@ -113,43 +134,51 @@ color: white;
 /* Restante do seu CSS permanece inalterado */
 
 
-  .buy-button {
-      background-color: #d14836;
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
-      font-size: 20px;
-      cursor: pointer;
-  }
+.buy-button {
+    background-color: #d14836;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 20px;
+    cursor: pointer;
+}
 
-  .features-section {
-      background-color: #f1f1f1;
-      padding: 50px 0;
-      text-align: center;
-  }
+.features-section {
+    display: flex;
+    flex-direction: row;
+    width: 100%;    
+    background-color: transparent;
+    padding: 20px;
+    justify-content: center;
+    text-align: center;
+    box-sizing: border-box;
+}
 
-  .features-section h2 {
-      font-size: 24px;
-      margin-bottom: 20px;
-  }
+.features-section h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+}
 
-  .feature {
-      margin: 20px;
-      display: inline-block;
-  }
+.feature {
+    margin: 20px;
+    display: inline-block;
+}
 
-  .feature img {
-      max-width: 100px;
-      height: auto;
-      margin-bottom: 10px;
-  }
+.feature img {
+    max-width: 100px;
+    height: auto;
+    margin-bottom: 10px;
+}
 
-  footer {
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      padding: 10px 0;
-  }
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+}
+
 .imghome {
     width: 100%;
     height: calc(100vh - 50px);
@@ -159,12 +188,19 @@ color: white;
 
 
 .purple-gradient-icon {
-    background: linear-gradient(to right, #4B0082, #000000);
+    background: linear-gradient(to right, white, white);
     -webkit-background-clip: text;
     color: transparent;
 }
 
-body, h1, h2, h3, p, ul, li, div {
+body,
+h1,
+h2,
+h3,
+p,
+ul,
+li,
+div {
     margin: 0;
     padding: 0;
 }
@@ -190,3 +226,10 @@ nav {
     margin-bottom: 0;
 }
 
+body {
+    background-image: url(../imagens/telainicial.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+}
