fix: correção pagina home

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,8 +20,9 @@
             </ul>
         </nav>
         <div class="search-bar">
-            <button class="buttonSearch">Entre com seu Login</button>
+            <a href="/authentication/login" class="buttonSearch">Entre com seu Login</a>
         </div>
+
     </header>
 
     <section class="wine-section">
