--- a/src/main/resources/templates/listaProduto.html
+++ b/src/main/resources/templates/listaProduto.html
@@ -6,10 +6,8 @@
     <link rel="stylesheet" th:href="@{/styles/listaProdutoStyle.css}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <!-- Inclua as folhas de estilo e o JavaScript do Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <title>Lista Produtos</title>
 </head>
 <body>
@@ -31,7 +29,7 @@
         <h1>Lista de Produtos</h1>
     </div>
     <div class="div-funcoes">
-        <button onclick="abrirModal()" class="botaoNovo">+ Novo</button>
+        <button class="botaoNovo" data-bs-toggle="modal" data-bs-target="#exampleModal">+ Novo</button>
         <div class="div-funcoes2">
             <form th:action="@{/admin/filtroNomeProduto}" method="get">
                 <input type="text" class="input-buscar" placeholder="Pesquisar ..." name="nomeProduto">
@@ -111,14 +109,66 @@
     <!-- ANA AQUI É O FIM DO MUDAR AS PAGINAS -->
 </div>
 
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-fullscreen">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastro de Produto</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form th:action="@{/admin/cadastrarProdutos}" method="post" th:object="${produto}" id="formCadastroProduto" enctype="multipart/form-data">
+                <div class="row">
+                  <div class="col-md-6 mb-3">
+                    <label for="nome" class="form-label">Nome</label>
+                    <input type="text" class="form-control" id="nome" name="nomeProduto" maxlength="200" required>
+                  </div>
+                  <div class="col-md-6 mb-3">
+                    <label for="valor" class="form-label">Valor</label>
+                    <input type="number" class="form-control" id="valor" name="precoProduto" step="0.01" min="1" required>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6 mb-3">
+                    <label for="quantidade" class="form-label">Quantidade</label>
+                    <input type="number" class="form-control" id="quantidade" name="qtdEstoque" min="1" required>
+                  </div>
+                  <div class="col-md-6 mb-3">
+                    <label for="avaliacao" class="form-label">Avaliação</label>
+                    <input type="number" class="form-control" id="avaliacao" name="avaliacaoProduto" min="0" max="5" step="0.5" required>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <label for="descricao" class="form-label">Descrição</label>
+                  <textarea class="form-control" id="descricao" name="descricaoProduto" rows="4" maxlength="2000"></textarea>
+                </div>
+                <div class="mb-3">
+                  <label for="imagem" class="form-label">Imagens</label>
+                  <input type="file" class="form-control" id="imagem" name="imagem" multiple required>
+                </div>
+                <div id="preview" class="row p-2 justify-content-center">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                  </div>
+              </form>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+
 <!-- Modal CADASTRO PRODUTO -->
-<div class="modal" id="myModal" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<!-- <div class="modal" id="myModal" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="container">
         <div class="form-image">
             <input class="buttonFile" id="imagem" type="file" multiple>
             <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner" id="preview">
-                    <!-- As imagens carregadas pelo JavaScript serão adicionadas aqui -->
+                
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -173,17 +223,17 @@
             </form>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Fim MODAL CADASTRO -->
 
 <!-- Modal Alterar PRODUTO -->
-<div id="modalAlterar" class="modal">
+<!-- <div id="modalAlterar" class="modal">
     <div class="container">
         <div class="form-image">
             <input class="buttonFile" id="imagem" type="file" multiple>
             <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner" id="preview">
-                    <!-- As imagens carregadas pelo JavaScript serão adicionadas aqui -->
+            
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -236,75 +286,13 @@
             </form>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Fim MODAL Alterar -->
 
 
 <script>
-    function formatarNumero(input) {
-            // Remove qualquer caractere que não seja número ou ponto decimal
-            input.value = input.value.replace(/[^0-9.]/g, '');
 
-            // Limita o valor ao intervalo de 0 a 5
-            if (input.value < 0) {
-                input.value = 0;
-            } else if (input.value > 5) {
-                input.value = 5;
-            }
-
-            // Formata o valor para ter uma casa decimal, se necessário
-            if (input.value.includes('.')) {
-                var parts = input.value.split('.');
-                if (parts[1].length > 1) {
-                    input.value = parseFloat(input.value).toFixed(1);
-                }
-            }
-        }
-    // Função para abrir o modal CADASTRO
-    function abrirModal() {
-        var modal = document.getElementById("myModal");
-        modal.style.display = "flex";
-    }
-
-    // Função para fechar o modal CADASTRO
-    function fecharModal() {
-        var modal = document.getElementById("myModal");
-        modal.style.display = "none";
-    }
-
-    // Função para abrir o modal ALTERAR
-    function abrirModalAlterar() {
-        var modal = document.getElementById("modalAlterar");
-        modal.style.display = "flex";
-    }
-
-    // Função para fechar o modal ALTERAR
-    function fecharModalAlterar() {
-        var modal = document.getElementById("modalAlterar");
-        modal.style.display = "none";
-    }
-    function formatarNumeroInteiro(input) {
-    // Remove qualquer caractere que não seja número
-    input.value = input.value.replace(/[^0-9]/g, '');
-}
-
-
-    function formatarNumero(input) {
-        // Remove qualquer caractere que não seja número ou ponto decimal
-        input.value = input.value.replace(/[^0-9.]/g, '');
-
-        // Divide a entrada em parte inteira e parte decimal
-        const partes = input.value.split('.');
-
-        // Limita a parte decimal a duas casas decimais
-        if (partes[1] && partes[1].length > 2) {
-            partes[1] = partes[1].slice(0, 2);
-        }
-
-        // Recria o valor formatado
-        input.value = partes.join('.');
-    }
-    function updateRadioInputs() {
+function updateRadioInputs() {
       var preview = document.getElementById('preview');
       var radios = preview.querySelectorAll('.form-check-input');
       var labels = preview.querySelectorAll('.form-check-label');
@@ -334,20 +322,20 @@
     }
 
     function handleFile(file, i) {
-    console.log(file.name);
-    if (!file.type.match('image/jpeg') && !file.type.match('image/png')) {
+      console.log(file.name);
+      if (!file.type.match('image/jpeg') && !file.type.match('image/png')) {
         alert('Só são permitidos arquivos de imagem (jpg, jpeg, png).');
         this.value = '';
         return;
-    }
+      }
 
-    var reader = new FileReader();
+      var reader = new FileReader();
 
-    reader.onload = function (e) {
+      reader.onload = function (e) {
         var img = document.createElement('img');
         img.src = e.target.result;
         img.alt = 'Imagem-produto';
-        img.className = 'carousel-item';
+        img.className = 'card-img-top';
 
         var cardBody = document.createElement('div');
         cardBody.className = 'card-body d-flex flex-column';
@@ -377,21 +365,21 @@
 
         var card = document.createElement('div');
         card.className = 'card p-2 m-1';
+        card.style.width = '18rem';
         card.appendChild(closeButton);
         card.appendChild(img);
         card.appendChild(cardBody);
 
         closeButton.addEventListener('click', function () {
-            removeImage(card, file);
-            updateRadioInputs();
+          removeImage(card, file);
+          updateRadioInputs()
         });
 
         preview.appendChild(card);
-    };
+      };
 
-    reader.readAsDataURL(file);
-}
-
+      reader.readAsDataURL(file);
+    }
 
     document.body.addEventListener('change', function (event) {
       if (event.target.id === 'imagem') {
@@ -421,6 +409,7 @@
         e.preventDefault();
       }
     });
+
 
 //alterar status do produto
 
